# accordant

./: .cursorignore  .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  COUNCIL_FUNCTIONALITY_FIXES.md  DEPLOYMENT_ISSUES_SUMMARY.md  DEPLOYMENT_STATUS.md  Dockerfile  HYGIENE_REPORT.md  ISSUES_SUMMARY.md  LICENSE  Makefile  PRODUCTION_DEPLOYMENT_FIXES.md  README.md  SECURITY.md  SECURITY_INCIDENT.md  SEED_PERSONAS_README.md  TWITTER_OAUTH_LOOP_ANALYSIS.md  XMARKDIGEST_DEPLOYMENT_ISSUES.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  seed-personas-sql.py  seed-personas.js  seed-system-prompts-sql.py  start.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: admin_routes.py  admin_users_routes.py  auth.py  config_routes.py  consensus_service.py  council.py  council_helpers.py  database.py  errors.py  evolution_service.py  invitations.py  limiter.py  llm_service.py  logging_config.py  main.py  middleware.py  migrate_to_multitenancy.py  models.py  openrouter.py  org_routes.py  organizations.py  ranking_service.py  schema.py  security.py  storage.py  streaming.py  tenant_migrations.py  users.py  voting_history.py
backend/config/: __init__.py  consensus_strategies.py  packs.py  paths.py  personalities.py  prompts.py  settings.py
docs/: ADMIN_GUIDE.md  ANALYTICS_CONFIGURATION.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  FAQ.md  SETUP.md  TROUBLESHOOTING.md  UPGRADE_PLAN.md  UPGRADE_QUICK_REFERENCE.md  USER_MANUAL.md
docs/adr/: ADR_INDEX.md  (+31 more)
frontend/: .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  test_output.txt  test_output_2.txt  test_output_3.txt  vite.config.js
migrations/: env.py
scripts/: analyze_dependencies.py  check-outdated.sh  check_backend.sh  verify_architecture.py
tests/: __init__.py  conftest.py  manual_reg_test.py  test_admin_boundaries.py  test_admin_models.py  test_admin_routes.py  test_admin_routes_edge_cases.py  test_admin_routes_errors.py  test_admin_routes_instance_admin.py  test_admin_routes_update_system_prompts.py  test_auth.py  test_config.py  test_config_prompts.py  test_config_routes.py  test_config_validation.py  test_consensus_strategies.py  test_council.py  test_council_edge_cases.py  test_council_helpers_edge_cases.py  test_council_helpers_unit.py  test_council_implementation.py  test_critical_paths_skeleton.py  test_debug_db.py  test_evolution_service.py  test_fixes.py  test_integration.py  test_invitations.py  test_llm_service.py  test_llm_service_edge_cases.py  test_llm_service_retry.py  test_main.py  test_migrations.py  test_multi_tenancy.py  test_multi_user.py  test_observability.py  test_observability_errors.py  test_openrouter.py  test_openrouter_additional_edge_cases.py  test_openrouter_edge_cases.py  test_org_routes.py  (+20 more)
(+190 files in other folders)
